feat: Implement Achronyme SDK with error handling and utility functions
- Added error classes for better error management in the SDK.
- Created a comprehensive index file to export SDK components.
- Defined type interfaces for various data structures used in the SDK.
- Developed utility functions for parsing and formatting values.
- Implemented tests for modulo operations and vector-vector multiplication.
- Verified npm package entry points and SDK functionality.
- Configured TypeScript settings for the SDK build.

--- a/package.json
+++ b/package.json
@@ -2,11 +2,22 @@
   "name": "@achronyme/core",
   "version": "0.3.0",
   "type": "module",
-  "description": "High-performance mathematical computation engine powered by WebAssembly (SOC - Superior Order Calculator)",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "description": "High-performance mathematical computation engine with DSP and functional programming - TypeScript SDK over WebAssembly core",
+  "main": "dist/sdk/index.js",
+  "types": "dist/sdk/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/sdk/index.js",
+      "types": "./dist/sdk/index.d.ts"
+    },
+    "./wasm": {
+      "import": "./dist/achronyme-core.mjs"
+    }
+  },
   "files": [
-    "dist/"
+    "dist/",
+    "LICENSE",
+    "README.md"
   ],
   "scripts": {
     "build:wasm": "bash scripts/build-wasm.sh",
