feat: Remove Phase 4 Implementation Plan and update package version to beta-3
fix: Correct reduce function argument order in Achronyme class

feat: Add modulo operation to AchronymeValue class

test: Enable filter function test and add matrix operations tests

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@achronyme/core",
-  "version": "0.3.0",
+  "version": "0.3.0-beta-3",
   "type": "module",
   "description": "High-performance mathematical computation engine with DSP and functional programming - TypeScript SDK over WebAssembly core",
   "main": "dist/sdk/index.js",
