--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@achronyme/core",
-  "version": "0.3.0-beta-6",
+  "version": "0.3.0-beta-7",
   "type": "module",
   "description": "High-performance mathematical computation engine with DSP and functional programming - TypeScript SDK over WebAssembly core",
   "main": "dist/sdk/index.js",
@@ -65,9 +65,9 @@
   },
   "homepage": "https://achronyme.com",
   "devDependencies": {
-    "typescript": "^5.3.0",
-    "vitest": "^1.0.0",
-    "@types/node": "^20.0.0"
+    "@types/node": "^20.0.0",
+    "typescript": "^5.9.3",
+    "vitest": "^1.0.0"
   },
   "engines": {
     "node": ">=18.0.0"
