Implement stability tests and optimize memory management in Achronyme
- Added comprehensive stability tests for the Achronyme system, covering various scenarios including repetitive operations, long chains of operations, simultaneous vector handling, and stress testing.
- Introduced a new fast operations API in C++ for efficient vector and matrix handling, minimizing overhead by avoiding parsing.
- Implemented a global HandleManager for managing memory with handles, allowing zero-copy operations and automatic lifetime management.
- Enhanced data extraction methods for vectors and matrices, ensuring safe access to internal data.
- Integrated fast path operations for mathematical functions, DSP operations, and vector manipulations to improve performance.
- Ensured proper memory cleanup and leak prevention through rigorous testing and handle management.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "lib": ["ES2020", "DOM"],
     "declaration": true,
     "outDir": "./dist",
-    "rootDir": "./js/src",
+    "rootDir": "./src",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
@@ -14,6 +14,6 @@
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true
   },
-  "include": ["js/src/**/*"],
+  "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "wasm", "js/__tests__"]
 }
