Add tests for Higher-Order Functions (HOF) in Achronyme Rust WASM
- Implemented comprehensive tests for map(), filter(), reduce(), and pipe() functions.
- Created separate test files for Rust and WASM implementations.
- Developed an HTML test suite for browser-based testing of HOF.
- Added a Vite configuration for serving the test suite.
- Included detailed logging for test results and error handling.
- Ensured compatibility with both Rust and JavaScript WASM modules.

--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,24 @@ ACHRONYME-PLOT-BLUEPRINT.md
 
 # Test/demo directories
 test-npm-install/
+
+# Rust
+/target/
+**/*.rs.bk
+**/*.rlib
+**/*.d
+**/*.rmeta
+# WASM artifacts (already present, but ensuring coverage)
+# *.wasm
+# *.wasm.map
+# *.js
+# *.ts
+# *.d.ts
+# *.js.map
+# *.wasm.br
+# *.wasm.gz
+# *.wasm.zip
+# *.wasm.bz2
+# *.wasm.lz4
+# *.wasm.zst
+# *.wasm.xz
