--- a/.npmignore
+++ b/.npmignore
@@ -1,9 +1,13 @@
-# Development files
-wasm/
+# Development and source files
 src/
+crates/
+target/
+wasm/
 examples/
 test-npm-install/
 docs/
+scripts/
+tests/
 
 # Build artifacts
 *.log
@@ -25,11 +29,25 @@ test-*
 *.test.*
 __tests__/
 
-# Scripts
-scripts/
-
-# TypeScript config
-tsconfig*.json
+# Configuration files
+.clang-format
+.editorconfig
+Cargo.lock
+Cargo.toml
+CHANGELOG.md
+CMakeLists.txt
+CONTRIBUTING.md
+inspect-wasm.mjs
+LICENSE
+README.md
+REFACTOR.md
+SESSION-SUMMARY.md
+test-hof.ach
+tsconfig.json
+tsconfig.sdk.json
+vitest.config.ts
+build-and-test.bat
+build-and-test.sh
 
 # Demo files
 demo-*.mjs
