--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,3 +41,8 @@ serde_json = "1.0"
 # Testing
 proptest = "1.0"       # Property-based testing
 criterion = "0.5"      # Benchmarking
+
+[profile.release]
+opt-level = 3
+lto = true
+codegen-units = 1
