--- a/crates/achronyme-wasm/Cargo.toml
+++ b/crates/achronyme-wasm/Cargo.toml
@@ -20,11 +20,6 @@ achronyme-eval = { path = "../achronyme-eval" }
 achronyme-dsp = { path = "../achronyme-dsp" }
 achronyme-linalg = { path = "../achronyme-linalg" }
 
-[profile.release]
-opt-level = 3
-lto = true
-codegen-units = 1
-
-# Disable wasm-opt to avoid bulk memory validation errors
+# Profile-specific metadata for wasm-pack
 [package.metadata.wasm-pack.profile.release]
-wasm-opt = false
+wasm-opt = false # Disable wasm-opt to avoid bulk memory validation errors
