feat: Update Achronyme SDK to v2.0 with Rust WASM integration, improved memory management, and enhanced interactive demo

--- a/.npmignore
+++ b/.npmignore
@@ -38,10 +38,10 @@ CHANGELOG.md
 CMakeLists.txt
 CONTRIBUTING.md
 inspect-wasm.mjs
-LICENSE
-README.md
 REFACTOR.md
 SESSION-SUMMARY.md
+SESSION.md
+.claude/
 test-hof.ach
 tsconfig.json
 tsconfig.sdk.json
