feat: Add numerical differentiation, integration, and root-finding capabilities
- Implemented numerical differentiation methods in `achronyme-numerical` crate, including forward, backward, and central differences.
- Added numerical integration methods such as trapezoidal rule, Simpson's rule, and Romberg integration.
- Introduced root-finding algorithms including bisection, Newton-Raphson, and secant methods.
- Created a new CLI tool in `achronyme-cli` for evaluating expressions and running scripts.
- Updated `Cargo.toml` to include the new `achronyme-numerical` crate.
- Added example scripts for testing numerical differentiation, integration, and root-finding functionalities.

--- a/crates/achronyme-cli/Cargo.toml
+++ b/crates/achronyme-cli/Cargo.toml
@@ -3,4 +3,11 @@ name = "achronyme-cli"
 version = "0.1.0"
 edition = "2021"
 
+[[bin]]
+name = "achronyme"
+path = "src/main.rs"
+
 [dependencies]
+achronyme-parser = { path = "../achronyme-parser" }
+achronyme-eval = { path = "../achronyme-eval" }
+achronyme-types = { path = "../achronyme-types" }
