Implement Simplex and Two-Phase Simplex methods for linear programming
- Added `Tableau` struct to represent the Simplex tableau and its operations.
- Implemented the Simplex algorithm in `tableau.rs` for solving linear programming problems.
- Developed the Two-Phase Simplex method in `two_phase.rs` to handle cases without an obvious basic feasible solution.
- Created various examples demonstrating the usage of the Simplex and Two-Phase methods in `soc` files.
- Added tests for the Simplex and Two-Phase methods to ensure correctness and reliability.
- Included functions for sensitivity analysis and shadow prices in the optimization examples.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ members = [
     "crates/achronyme-dsp",
     "crates/achronyme-numerical",
     "crates/achronyme-wasm",
-    "crates/achronyme-cli",
+    "crates/achronyme-cli", "crates/achronyme-solver",
 ]
 
 [workspace.dependencies]
