--- a/crates/achronyme-eval/Cargo.toml
+++ b/crates/achronyme-eval/Cargo.toml
@@ -9,3 +9,4 @@ achronyme-parser = { path = "../achronyme-parser" }
 achronyme-dsp = { path = "../achronyme-dsp" }
 achronyme-linalg = { path = "../achronyme-linalg" }
 achronyme-numerical = { path = "../achronyme-numerical" }
+achronyme-solver = { path = "../achronyme-solver" }
