--- a/crates/achronyme-wasm/Cargo.toml
+++ b/crates/achronyme-wasm/Cargo.toml
@@ -20,6 +20,7 @@ achronyme-eval = { path = "../achronyme-eval" }
 achronyme-dsp = { path = "../achronyme-dsp" }
 achronyme-linalg = { path = "../achronyme-linalg" }
 achronyme-numerical = { path = "../achronyme-numerical" }
+achronyme-solver = { path = "../achronyme-solver" }
 
 # Profile-specific metadata for wasm-pack
 [package.metadata.wasm-pack.profile.release]
