Refactor vector evaluation to support type promotion and enhance broadcasting tests
- Updated `evaluate_vector` function to evaluate all elements first, allowing for type promotion from numbers to complex numbers.
- Added comprehensive tests for broadcasting operations involving scalars and vectors, including addition, subtraction, multiplication, and division.
- Implemented tests for type promotion scenarios, ensuring mixed number and complex literals are handled correctly.
- Introduced a highlighter for syntax highlighting in the REPL, supporting built-in functions and operators.
- Created a REPL helper to manage function completion and hinting, improving user experience.

--- a/crates/achronyme-cli/Cargo.toml
+++ b/crates/achronyme-cli/Cargo.toml
@@ -11,3 +11,7 @@ path = "src/main.rs"
 achronyme-parser = { path = "../achronyme-parser" }
 achronyme-eval = { path = "../achronyme-eval" }
 achronyme-types = { path = "../achronyme-types" }
+rustyline = "14.0"
+nu-ansi-term = "0.50"
+pest = "2.7"
+dirs = "5.0"
