Implement Phase 2 of Module System: Complete Module Resolution Infrastructure
- Created `Module` and `ModuleRegistry` structs for managing modules and their functions.
- Implemented function registration, resolution logic, and import handling in the evaluator.
- Enhanced `FunctionRegistry` to support function pointer retrieval.
- Developed comprehensive tests for module registry and import statements.
- Added example usage of the module system in a statistical data analysis application.
- Created utility modules for data processing and visualization, demonstrating future extensibility.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ members = [
     "crates/achronyme-wasm",
     "crates/achronyme-cli",
     "crates/achronyme-solver",
+    "crates/achronyme-env",
 ]
 # Exclude CLI from default members to avoid pulling CLI dependencies when building WASM
 default-members = [
@@ -21,6 +22,7 @@ default-members = [
     "crates/achronyme-numerical",
     "crates/achronyme-wasm",
     "crates/achronyme-solver",
+    "crates/achronyme-env",
 ]
 
 [workspace.dependencies]
