--- a/crates/achronyme-eval/Cargo.toml
+++ b/crates/achronyme-eval/Cargo.toml
@@ -10,3 +10,4 @@ achronyme-dsp = { path = "../achronyme-dsp" }
 achronyme-linalg = { path = "../achronyme-linalg" }
 achronyme-numerical = { path = "../achronyme-numerical" }
 achronyme-solver = { path = "../achronyme-solver" }
+achronyme-env = { path = "../achronyme-env" }
