--- a/crates/achronyme-cli/Cargo.toml
+++ b/crates/achronyme-cli/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "achronyme-cli"
-version = "0.1.0"
+version = "0.6.0"
 edition = "2021"
 
 [[bin]]
@@ -20,3 +20,4 @@ rustyline = { version = "14.0", optional = true }
 nu-ansi-term = { version = "0.50", optional = true }
 pest = { version = "2.7", optional = true }
 dirs = { version = "5.0", optional = true }
+clap = { version = "4.4", features = ["derive"] }
