--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,9 @@ on:
     tags:
       - 'v*'
 
+permissions:
+  contents: write
+
 env:
   CARGO_TERM_COLOR: always
 
@@ -25,12 +28,9 @@ jobs:
 
       - name: Create Release
         id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: softprops/action-gh-release@v1
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Achronyme ${{ steps.get_version.outputs.version }}
+          name: Achronyme ${{ steps.get_version.outputs.version }}
           body: |
             ## Achronyme v${{ steps.get_version.outputs.version }}
 
@@ -60,11 +60,15 @@ jobs:
             See [CHANGELOG](https://github.com/${{ github.repository }}/blob/main/CHANGELOG.md) for details.
           draft: false
           prerelease: ${{ contains(github.ref, 'alpha') || contains(github.ref, 'beta') || contains(github.ref, 'rc') }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   build-linux:
     name: Build Linux
     needs: create-release
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -92,30 +96,21 @@ jobs:
           tar czf achronyme-${{ needs.create-release.outputs.version }}-linux-x64.tar.gz achronyme
           sha256sum achronyme-${{ needs.create-release.outputs.version }}-linux-x64.tar.gz > achronyme-${{ needs.create-release.outputs.version }}-linux-x64.tar.gz.sha256
 
-      - name: Upload binary
-        uses: actions/upload-release-asset@v1
+      - name: Upload to Release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: |
+            target/release/achronyme-${{ needs.create-release.outputs.version }}-linux-x64.tar.gz
+            target/release/achronyme-${{ needs.create-release.outputs.version }}-linux-x64.tar.gz.sha256
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ needs.create-release.outputs.upload_url }}
-          asset_path: target/release/achronyme-${{ needs.create-release.outputs.version }}-linux-x64.tar.gz
-          asset_name: achronyme-${{ needs.create-release.outputs.version }}-linux-x64.tar.gz
-          asset_content_type: application/gzip
-
-      - name: Upload checksum
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ needs.create-release.outputs.upload_url }}
-          asset_path: target/release/achronyme-${{ needs.create-release.outputs.version }}-linux-x64.tar.gz.sha256
-          asset_name: achronyme-${{ needs.create-release.outputs.version }}-linux-x64.tar.gz.sha256
-          asset_content_type: text/plain
 
   build-macos:
     name: Build macOS
     needs: create-release
     runs-on: macos-latest
+    permissions:
+      contents: write
     strategy:
       matrix:
         target: [x86_64-apple-darwin, aarch64-apple-darwin]
@@ -154,30 +149,21 @@ jobs:
           tar czf achronyme-${{ needs.create-release.outputs.version }}-macos-${{ steps.arch.outputs.name }}.tar.gz achronyme
           shasum -a 256 achronyme-${{ needs.create-release.outputs.version }}-macos-${{ steps.arch.outputs.name }}.tar.gz > achronyme-${{ needs.create-release.outputs.version }}-macos-${{ steps.arch.outputs.name }}.tar.gz.sha256
 
-      - name: Upload binary
-        uses: actions/upload-release-asset@v1
+      - name: Upload to Release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: |
+            target/${{ matrix.target }}/release/achronyme-${{ needs.create-release.outputs.version }}-macos-${{ steps.arch.outputs.name }}.tar.gz
+            target/${{ matrix.target }}/release/achronyme-${{ needs.create-release.outputs.version }}-macos-${{ steps.arch.outputs.name }}.tar.gz.sha256
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ needs.create-release.outputs.upload_url }}
-          asset_path: target/${{ matrix.target }}/release/achronyme-${{ needs.create-release.outputs.version }}-macos-${{ steps.arch.outputs.name }}.tar.gz
-          asset_name: achronyme-${{ needs.create-release.outputs.version }}-macos-${{ steps.arch.outputs.name }}.tar.gz
-          asset_content_type: application/gzip
-
-      - name: Upload checksum
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ needs.create-release.outputs.upload_url }}
-          asset_path: target/${{ matrix.target }}/release/achronyme-${{ needs.create-release.outputs.version }}-macos-${{ steps.arch.outputs.name }}.tar.gz.sha256
-          asset_name: achronyme-${{ needs.create-release.outputs.version }}-macos-${{ steps.arch.outputs.name }}.tar.gz.sha256
-          asset_content_type: text/plain
 
   build-windows:
     name: Build Windows
     needs: create-release
     runs-on: windows-latest
+    permissions:
+      contents: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -195,22 +181,11 @@ jobs:
           Compress-Archive -Path achronyme.exe -DestinationPath achronyme-${{ needs.create-release.outputs.version }}-windows-x64.zip
           (Get-FileHash achronyme-${{ needs.create-release.outputs.version }}-windows-x64.zip -Algorithm SHA256).Hash | Out-File -FilePath achronyme-${{ needs.create-release.outputs.version }}-windows-x64.zip.sha256
 
-      - name: Upload binary
-        uses: actions/upload-release-asset@v1
+      - name: Upload to Release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: |
+            target/release/achronyme-${{ needs.create-release.outputs.version }}-windows-x64.zip
+            target/release/achronyme-${{ needs.create-release.outputs.version }}-windows-x64.zip.sha256
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ needs.create-release.outputs.upload_url }}
-          asset_path: target/release/achronyme-${{ needs.create-release.outputs.version }}-windows-x64.zip
-          asset_name: achronyme-${{ needs.create-release.outputs.version }}-windows-x64.zip
-          asset_content_type: application/zip
-
-      - name: Upload checksum
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ needs.create-release.outputs.upload_url }}
-          asset_path: target/release/achronyme-${{ needs.create-release.outputs.version }}-windows-x64.zip.sha256
-          asset_name: achronyme-${{ needs.create-release.outputs.version }}-windows-x64.zip.sha256
-          asset_content_type: text/plain
